--- a/chess.vcxproj.filters
+++ b/chess.vcxproj.filters
@@ -26,5 +26,21 @@
     <ClInclude Include="vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="chess.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\chessboard.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\test.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
